Fixed text breaks in projects

--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -177,6 +177,7 @@
 
         .text-center {
           overflow: hidden;
+          word-wrap: break-word;
           p {
             font-size: 1.1rem;
             margin: 0 0 1rem 0;
